Fix truncate-string for not overflowing properly
Adding `allow-overflow` is not working as expected. When
the menu tooltip's width exceed 600px, the tooltip content
isn't overflow.

This adds `truncate-string-menu-content` to apply overflow
property.
This also cleans up unused helper class and removes inaccurate
props. i.e. `menuMaxWidth` on v-menu of use database dropdown.

--- a/maxgui/src/styles/helpers.scss
+++ b/maxgui/src/styles/helpers.scss
@@ -55,11 +55,6 @@
     }
 }
 
-.overflow-helper {
-    overflow: scroll;
-    max-height: 500px;
-}
-
 .no-userSelect {
     user-select: none !important;
 }
